--- a/app.ipynb
+++ b/app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "70cb402b-5cfa-4d44-a6a9-24e7a327dee3",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
     "\n",
     "app = Flask(__name__)\n",
     "\n",
-    "model = load_model('my_model_1')\n",
+    "model = load_model('model/my_model_deep_m__40_epochs')\n",
     "\n",
     "picFolder = os.path.join('static', 'pics')\n",
     "app.config['UPLOAD_FOLDER'] = picFolder\n",
@@ -39,15 +39,20 @@
     "\n",
     "@app.route('/', methods=[\"POST\", \"GET\"])\n",
     "def predict():\n",
-    "    imagefile = request.files['imagefile']     \n",
+    "                \n",
+    "    imagefile = request.files['imagefile']\n",
     "    \n",
-    "    # used to upload the photo\n",
-    "    image_path = os.path.join(app.config['UPLOAD_FOLDER'], imagefile.filename)\n",
-    "    imagefile.save(image_path)                                          \n",
+    "    try:\n",
+    "        # used to upload the photo\n",
+    "        image_path = os.path.join(app.config['UPLOAD_FOLDER'], imagefile.filename)\n",
+    "        imagefile.save(image_path)                                          \n",
+    "\n",
+    "        #generate predictions\n",
+    "        predict = predict_image(image_path, model)\n",
+    "        demo_img_path = showcase_prediction(predict, image_path)\n",
     "    \n",
-    "    #generate predictions\n",
-    "    predict = predict_image(image_path, model)\n",
-    "    demo_img_path = showcase_prediction(predict, image_path)\n",
+    "    except IsADirectoryError:\n",
+    "        demo_img_path = os.path.join(app.config['UPLOAD_FOLDER'], 'image-not-found.jpeg')\n",
     "    \n",
     "    return render_template('home.html', img_path = demo_img_path )\n",
     "\n",
@@ -58,8 +63,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "03999995-7da9-470d-b02c-bf6157477d27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "if ('d'):\n",
+    "    print('hi')\n",
+    "else:\n",
+    "    print('no')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa9f3e40-f1c1-45a3-a445-3313eea54d4d",
    "metadata": {},
    "outputs": [],
    "source": []
