--- a/eda.ipynb
+++ b/eda.ipynb
@@ -15,11 +15,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "120df7a6-8018-419b-9b82-2498a536aeb9",
-   "metadata": {},
+   "id": "963b1bc3-00ef-4c89-92e0-f9149a14a8e6",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Create DataFrame\n",
     "\n",
+    "## Download data from kaggle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c37f72f1-3e37-474d-9590-979e600bcfb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !cd data\n",
+    "# !kaggle competitions download challenges-in-representation-learning-facial-expression-recognition-challenge -f icml_face_data.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "120df7a6-8018-419b-9b82-2498a536aeb9",
+   "metadata": {},
+   "source": [
     "## Load CSV file to dataframe.\n",
     "The csv file downloaded from kaggle contains only 3 columns: 'emotion' (int), 'usage' (str), and 'pixels' (str).\n",
     "\n",
