deep model tweaked to increase filter size in layer 2. re ran and saved model

--- a/face_expression_model.ipynb
+++ b/face_expression_model.ipynb
@@ -30,12 +30,14 @@
    "source": [
     "# Dataset preprocessing\n",
     "\n",
-    "## Load Data from Directory"
+    "## Load Data from Directory\n",
+    "\n",
+    "Load data using a Keras utility"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "e86cd821-8a81-4e04-ae1f-5ff83e78ffd6",
    "metadata": {},
    "outputs": [
@@ -44,21 +46,7 @@
      "output_type": "stream",
      "text": [
       "Found 27463 files belonging to 7 classes.\n",
-      "Using 21971 files for training.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-12-05 12:24:41.723228: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Using 21971 files for training.\n",
       "Found 27463 files belonging to 7 classes.\n",
       "Using 5492 files for validation.\n",
       "Found 6584 files belonging to 7 classes.\n"
@@ -297,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "dd932671-a66a-400a-8bc7-d38036d4d6a3",
    "metadata": {},
    "outputs": [
@@ -305,7 +293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential_4\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
@@ -343,14 +331,15 @@
       "Total params: 3,300,103\n",
       "Trainable params: 3,299,911\n",
       "Non-trainable params: 192\n",
-      "_________________________________________________________________\n"
+      "_________________________________________________________________\n",
+      "None\n"
      ]
     }
    ],
    "source": [
     "#shallow sequence\n",
     "shallow_model = facial_expr_model(shallow_sequence)\n",
-    "shallow_model.summary()                  "
+    "print(shallow_model.summary()     )             "
    ]
   },
   {
